--- a/main.css
+++ b/main.css
@@ -42,3 +42,25 @@ p {
 a {
 
 }
+
+/*-----------------------------------------------
+*   Hero
+-----------------------------------------------*/
+
+.hero {
+	background-color: #3f51b5;
+	color: #fff;
+	padding: 40px 0;
+	text-align: center;
+
+}
+
+/*-----------------------------------------------
+*   Hero
+-----------------------------------------------*/
+
+.logo {
+	font-size: 34px;
+	font-weight: bold;
+	text-transform: uppercase;
+}
