--- a/main.css
+++ b/main.css
@@ -28,11 +28,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 ol {
-
-}
-
-li{
-
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
 }
 
 p {
@@ -50,17 +48,42 @@ a {
 .hero {
 	background-color: #3f51b5;
 	color: #fff;
+	margin-bottom: 20px;
 	padding: 40px 0;
 	text-align: center;
 
 }
 
 /*-----------------------------------------------
-*   Hero
+*   Logo
 -----------------------------------------------*/
 
 .logo {
 	font-size: 34px;
 	font-weight: bold;
 	text-transform: uppercase;
+}
+
+/*-----------------------------------------------
+*   News
+-----------------------------------------------*/
+
+.news-item {
+	border-bottom: 1px solid #b6b6b6;
+	margin-bottom: 20px;
+	padding-bottom: 20px;
+}
+
+.news-link {
+	color: #3f51b5;
+	font-size: 20px;
+}
+
+/*-----------------------------------------------
+*   Container
+-----------------------------------------------*/
+
+.container {
+	margin: 0 auto;
+	max-width: 800px;
 }
