--- a/main.css
+++ b/main.css
@@ -20,6 +20,10 @@
 -----------------------------------------------*/
 
 body {
+	color: #212121;
+	font-family: 'Lato', sans-serif;
+	font-size: 16px;
+	line-height: 1.5;
 
 }
 
@@ -27,7 +31,7 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
-ol {
+ol, ul {
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
@@ -38,7 +42,14 @@ p {
 }
 
 a {
+	color: #ff4081 ;
 
+}
+
+a:active,
+a:hover,
+a:focus {
+	color: #212121;
 }
 
 /*-----------------------------------------------
@@ -76,7 +87,15 @@ a {
 
 .news-link {
 	color: #3f51b5;
+	display: block;
 	font-size: 20px;
+	margin-bottom: 10px;
+
+}
+
+.news-meta-item {
+	display: inline;
+	margin-right: 15px;
 }
 
 /*-----------------------------------------------
