--- a/main.css
+++ b/main.css
@@ -43,6 +43,7 @@ p {
 
 a {
 	color: #ff4081 ;
+	transition: 0.2s ease-in-out;
 
 }
 
@@ -113,6 +114,42 @@ a:focus {
 
 .is-liked {
 	animation: flash 2s;
+}
+
+
+/*-----------------------------------------------
+*   Form
+-----------------------------------------------*/
+
+.form {
+	height: 0;
+	margin-bottom: 20px;
+	opacity: 0;
+	transition: opacity 0.2s ;
+	visibility: hidden;
+}
+
+.form.is-visible {
+	height: auto;
+	opacity: 1;
+	transition: opacity 0.2s ease-in-out, visibiity 0.2s ease-in-out;
+	visibility: visible;
+}
+
+.form-label {
+	display: block;
+	font-weight: bold;
+	margin-bottom: 5px;
+}
+
+.form-input {
+	box-sizing: border-box;
+	border: 1px solid #b6b6b6;
+	border-radius: 4px;
+	font-size: 20px;
+	padding: 10px;
+	width: 100%;
+
 }
 
 
