--- a/main.css
+++ b/main.css
@@ -28,6 +28,8 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
+	margin-top: 5px;
+	margin-bottom: 5px;
 
 }
 
@@ -86,6 +88,12 @@ a:focus {
 	padding-bottom: 20px;
 }
 
+.news-item:last-child {
+	border-bottom: 0;
+	margin-bottom: 0;
+	padding-bottom: 0;
+}
+
 .news-link {
 	color: #3f51b5;
 	display: block;
@@ -100,6 +108,17 @@ a:focus {
 }
 
 /*-----------------------------------------------
+*   Content
+-----------------------------------------------*/
+
+.content {
+	margin-bottom: 40px;
+}
+
+
+
+
+/*-----------------------------------------------
 *   Container
 -----------------------------------------------*/
 
@@ -107,6 +126,7 @@ a:focus {
 	margin: 0 auto;
 	max-width: 800px;
 }
+
 
 /*-----------------------------------------------
 *   States
@@ -151,6 +171,71 @@ a:focus {
 	width: 100%;
 
 }
+
+/*-----------------------------------------------
+*   Modal
+-----------------------------------------------*/
+
+.modal {
+	background-color: #fff;
+	box-shadow: 0 2px 6px rgba(0, 0, 0, 0.45);
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	left: 50%;
+	position: absolute;
+	transform: translate(-50%, -5%);
+	top: 40px;
+	width: 500px;
+	z-index: 2;
+	opacity: 0;
+	transition: 0.4s ease-in-out ;
+	visibility: hidden;
+}
+
+.modal.is-visible {
+	opacity: 1;
+	transform: translate(-50%,0);
+	visibility: visible;
+}
+
+.modal-media {
+	position: relative;
+}
+
+.modal-media-title {
+	color: #fff;
+	bottom: 20px;
+	left: 20px;
+	font-size: 30px;
+	position: absolute;
+}
+
+.modal-content {
+	padding: 20px;
+}
+
+.modal-overlay {
+	background-color: #212121;
+	height: 100%
+	width: 100%;
+	bottom: 0;
+	left:0;
+	right:0;
+	top:0;
+	opacity: 0.4;
+	position: fixed;
+	z-index: 1;
+	opacity: 0;
+	transition: opacity 0.2s ;
+	visibility: hidden;
+}
+
+.modal-overlay.is-visible {
+	opacity: 0.4;
+	transition: opacity 0.2s ease-in-out, visibiity 0.2s ease-in-out;
+	visibility: visible;
+}
+
 
 
 /*-----------------------------------------------
